# 22_Django

./: .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt
catalog/: apps.py  models.py  urls.py  views.py
catalog/templates/catalog/: contacts.html  home.html  response.html
catalog/templates/first_project/: contacts.html  home.html
config/: settings.py  urls.py
first_project/: urls.py  views.py
first_project/templates/first_project/: contact.html
static/css/: bootstrap.css
